# podcast-rag

./: .gitignore  AGENTS.md  PLAN.md  README.md  docker-compose.qdrant.yml  pyproject.toml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: api.ts  main.tsx  styles.css  types.ts
examples/: pizarro_transcript.txt  sample_transcript.txt
src/podcast_rag/: __init__.py  agent_tools.py  analytics.py  chunking.py  cli.py  config.py  corpora.py  dashboard.py  db.py  discovery.py  domain_profiles.py  embeddings.py  entities.py  ingest.py  llm.py  mcp_server.py  media.py  models.py  retrieval_qdrant.py  search.py  timecode.py  transcription.py  transcripts.py  workflows.py
tests/: test_agent_tools.py  test_analytics.py  test_chunking.py  test_config.py  test_corpora.py  test_dashboard.py  test_db_search.py  test_discovery.py  test_domain_profiles.py  test_embeddings.py  test_entities.py  test_ingest.py  test_llm.py  test_project_metadata.py  test_related_topics.py  test_retrieval_qdrant.py  test_transcription.py  test_transcripts.py  test_transparency.py  test_workflows.py
