[project]
name = "podcast-rag"
version = "0.1.0"
description = "Local-first RAG tooling for podcasts and videos."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "yt-dlp>=2025.1.15",
    "faster-whisper>=1.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
podcast-rag = "podcast_rag.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
