[project]
name = "podcast-rag"
version = "0.1.0"
description = "Local-first RAG tooling for podcasts and videos."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "yt-dlp>=2025.1.15",
    "faster-whisper>=1.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "sentence-transformers>=3.0.0",
    "qdrant-client[fastembed]>=1.14.2",
    "mcp>=1.12.0",
]

[project.scripts]
podcast-rag = "podcast_rag.cli:app"
podcast-rag-mcp = "podcast_rag.mcp_server:main"
podcast-rag-dashboard = "podcast_rag.dashboard:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
